dynamodel_tests/tests/ui/fails/enum_newtype_tagged.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
#[dynamodel(tag = "type")]
enum NewType {
    Str(String),
}

fn main() {}
